infra/k8s/app.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${NS}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: ${NS}
  labels:
    app: api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api-service
          image: draweditor:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 300m
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ${NS}
spec:
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 3000
