infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NS}-ingress
  namespace: ${NS}
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: ${NS}.draweditor.com
      http:
        paths:
          - pathType: Prefix
            path: /api/(.*)
            backend:
              service:
                name: api-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: web-service
                port:
                  number: 4000
